Add netlink switchdev driver (PoC)
  Add netlink switchdev driver for prestera to be able to
interact with user space application instead of real
hardware.

  Prestera driver implements external PCI adapter (prestera_pci.c)
to interact with real hardware. Once netlink driver is loaded
instead of PCI adapter, the internal IPC messages are sent/receive
via Netlink driver instead. Netlink driver defines and implements
Netlink IPC between user space, so the applications can handle
requests/responses doing hardware configuration from user space,
e.g. via SAI interface, etc.

Signed-off-by: Volodymyr Mytnyk <volodymyr.mytnyk@plvision.eu>

--- a/drivers/net/ethernet/marvell/prestera/Makefile
+++ b/drivers/net/ethernet/marvell/prestera/Makefile
@@ -14,3 +14,4 @@ ccflags-$(CONFIG_MRVL_PRESTERA_DEBUG) += -DCONFIG_MRVL_PRESTERA_DEBUG
 
 obj-$(CONFIG_PRESTERA_PCI)	+= prestera_pci.o
 obj-$(CONFIG_PRESTERA_SHM)	+= prestera_shm.o
+obj-$(CONFIG_SWDEVSAI_NL)	+= swdevsai_nl.o
